[tool.poetry]
name = "elansbackend"
version = "0.1.0"
description = ""
authors = ["Mark Fomin <mark@difhel.dev>", "Andrew Cherkashin <andrey.a.cherkashin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.1"
loguru = "^0.7.2"
python-jose = "^3.3.0"
sentry-sdk = {extras = ["loguru"], version = "^2.12.0"}
pymongo = "^4.8.0"
passlib = "^1.7.4"

[tool.poetry.group.dev.dependencies]
pylint = "^3.2.6"
types-passlib = "^1.7.7.13"
pyright = "^1.1.374"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylint."MESSAGES CONTROL"]
disable="import-error,fixme,no-name-in-module,no-self-argument,unreachable,broad-exception-raised,missing-class-docstring,invalid-name,too-few-public-methods,missing-function-docstring,missing-module-docstring"

[tool.pylint."BASIC"]
docstring-min-length=-1

[tool.pylint."FORMAT"]
max-line-length=100
indent-string='    '
indent-after-paren=4
expected-line-ending-format=''

[tool.pyright]
include = ["./src/**"]
