[tool.poetry]
name = "elansbackend"
version = "0.1.0"
description = ""
authors = ["Mark Fomin <mark@difhel.dev>", "Andrew Cherkashin <andrey.a.cherkashin@gmail.com>"]
package-mode = false
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.1"
loguru = "^0.7.2"
python-jose = "^3.3.0"
sentry-sdk = {extras = ["loguru"], version = "^2.12.0"}
pymongo = "^4.8.0"
passlib = "^1.7.4"

[tool.poetry.group.dev.dependencies]
pylint = "^3.2.6"
types-passlib = "^1.7.7.13"
pyright = "^1.1.374"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylint."MESSAGES CONTROL"]
disable="fixme,no-self-argument,missing-class-docstring,import-error,no-name-in-module,too-few-public-methods,missing-function-docstring,missing-module-docstring"
enable="wildcard-import"


[tool.pylint."FORMAT"]
max-line-length=120
indent-string="    "
indent-after-paren=4
expected-line-ending-format=""

[tool.pyright]
include = ["./src/**"]
